--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,14 @@
       <div class="current">Current score: <span>0</span></div>
       <div class="collisions">Collisions: <span>0</span></div>
     </div>
+
+    <div class="container">
+
+
+    </div>
+    
     <script src="lib/d3.js" charset="utf-8"></script>
     <script src='watchout.js'></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   </body>
 </html>
