--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,8 @@
     </div>
     
     <script src="lib/d3.js" charset="utf-8"></script>
+    <script src="lib/jquery-1.11.3.min.js"></script>
+    <script src='Player.js'></script>
     <script src='watchout.js'></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   </body>
 </html>
